<resources>
    <string name="app_name">NZ Mobile Ad Toolkit</string>
    <string name="app_descr">This app records you phone\'s screen to detect advertisement content served to you within your Meta Facebook app.</string>
    <string name="app_preface_registered">When the switch above is flipped on, this app will detect advertisements.</string>
    <string name="recording_status">Recording Status</string>
    <string name="recording_descr">When active, your screen is being recorded.</string>
    <string name="dialog_loading">Loading...</string>

    <string name="dialog_registration_error_title">REGISTRATION FAILED</string>
    <string name="dialog_registration_error_description">Unfortunately, there was an error with the registration process. Please check that you are connected to the internet, and then try again.</string>
    <string name="dialog_registration_error_back_text">BACK</string>

    <string name="dialog_registration_success_title">REGISTRATION COMPLETE</string>
    <string name="dialog_registration_success_description">Thank you for choosing to participate. The registration process is now complete.</string>
    <string name="dialog_registration_success_back_text">CONTINUE</string>

    <string name="fragment_dashboard_title">My Personal Dashboard</string>
    <string name="fragment_dashboard_activation_code_text">My Activation Code: Loading...</string>
    <string name="fragment_dashboard_back_text">BACK TO MAIN</string>

    <string name="fragment_main_app_status_unregistered">APP STATUS: UNREGISTERED</string>
    <string name="fragment_main_app_preface">This app records you device\'s screen to detect advertisement content served to you within your Meta Facebook app.</string>
    <string name="fragment_main_app_preface_unregistered">To begin detecting advertisements, you will need to register. This can be done below:</string>
    <string name="fragment_main_register_text">Register</string>
    <string name="fragment_main_footer_learn_more">The project was jointly developed by ADM+S. To learn more about our research project, you can visit the official ADM+S website, by clicking <a href="https://www.admscentre.org.au/adobservatory/">here</a></string>
    <string name="fragment_main_footer_privacy_policy"><a href="https://www.admscentre.org.au/wp-content/uploads/2021/05/ETH_Participant_Information-Sheet_V1.1_20210513.pdf">Read Our Privacy Policy</a></string>

    <string name="fragment_main_app_status_registered">APP STATUS: REGISTERED</string>
    <string name="fragment_main_app_dashboard_tooltip">Advertisements that you have already observed can be viewed at your personal dashboard.</string>
    <string name="fragment_main_app_dashboard_text">GO TO MY DASHBOARD</string>
    <string name="dashboard_observed_prefix">Observed </string>
    <string name="notification_reboot_title">Ad observations stop after a reboot</string>
    <string name="notification_reboot_description">Tap to start observing ads again</string>
    <string name="notification_periodic_title">Ads are not being observed</string>
    <string name="notification_periodic_title_unregistered">The app is not registered</string>
    <string name="notification_periodic_description">Tap to start observing ads</string>
    <string name="notification_periodic_description_unregistered">Tap to register the app</string>
    <string name="demographic_failsafe_string">One or more fields need to be entered before you can continue</string>
    <string name="demographic_failsafe_country">Research participation is not available to users outside Australia at this point.</string>
    <string name="activation_code_not_applicable">N/A</string>
    <string name="activation_code_prefix">My Activation Code: </string>
    <string name="notification_periodic_channel_id_name">Inactivity Reminders</string>
    <string name="notification_periodic_channel_description">This app is designed to stop collecting ads whenever your device restarts. When this happens, we\'ll need your permission to re-enable it</string>
    <string name="notification_recording_channel_id_name">Recording Reminders</string>
    <string name="notification_recording_channel_description">Be informed of when our app has started collecting Facebook ads</string>
    <string name="notification_recording_title">Ads are being observed</string>
    <string name="notification_recording_description">The app is now collecting Facebook ads that have been served to you</string>
    <string name="app_underscore_code">adms_mobile_ad_observatory</string>
    <string name="app_child_directory_name">australianmobileadobservatory</string>
    <string name="app_titled_code">AustralianMobileAdObservatory</string>

</resources>

