
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fragment_main"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.adms.australianmobileadtoolkit.MainActivity">


    <LinearLayout
        android:id="@+id/fragment_main_unregistered"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/barlow_bold"
            android:textSize="13.5sp"
            android:letterSpacing="0.15"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:textColor="@color/red_primary"
            android:text="@string/fragment_main_app_status_unregistered"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:height="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/fragment_main_app_preface"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:text="@string/fragment_main_app_preface_unregistered"
            />
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_register_text"
            android:theme="@style/PrimaryButton"/>

        <TextView
            android:id="@+id/fragment_main_learn_more_unregistered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:text="@string/fragment_main_footer_learn_more"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>

        <TextView
            android:id="@+id/fragment_main_privacy_policy_unregistered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/fragment_main_footer_privacy_policy"
            android:textAlignment="center" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_main_registered"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:fillViewport="true"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/barlow_bold"
            android:textSize="13.5sp"
            android:letterSpacing="0.15"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:textColor="@color/yellow_primary"
            android:text="@string/fragment_main_app_status_registered"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:height="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"
            android:text="@string/fragment_main_app_preface"
            />

        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="2dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:width="48dp"
            android:height="48dp"
            android:theme="@style/Switch"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:text="@string/app_preface_registered"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>

        <TextView
            android:id="@+id/fragment_main_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:text="@string/fragment_main_app_dashboard_tooltip"
            />
        <Button
            android:id="@+id/buttonDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_app_dashboard_text"
            android:layout_marginBottom="15dp"
            android:theme="@style/SecondaryButton"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>

        <TextView
            android:id="@+id/fragment_main_learn_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:text="@string/fragment_main_footer_learn_more"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>

        <TextView
            android:id="@+id/fragment_main_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/fragment_main_footer_privacy_policy"
            android:textAlignment="center" />


    </LinearLayout>
</LinearLayout>