
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dashboard"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adms.australianmobileadtoolkit.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentDashboardTopBar">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/barlow_bold"
            android:textSize="18sp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/yellow_primary"
            android:text="@string/fragment_dashboard_title"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/yellow_primary"/>
        <TextView
            android:id="@+id/myActivationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textSize="9sp"
            android:letterSpacing="0.05"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:textColor="@color/yellow_primary"
            android:textStyle="italic"
            android:text="@string/fragment_dashboard_activation_code_text"
            />
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmentDashboardTopBar"
        android:layout_above="@+id/fragmentDashboardBottomBar">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/fragment_dashboard_overview"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/dashboardLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp">

                    <RelativeLayout
                        android:id="@+id/loadingPanel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="25dp"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" >

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminateTint="@color/yellow_primary"
                            android:indeterminateTintMode="src_in"
                            android:indeterminate="true" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_loading"
                        android:textColor="@color/yellow_primary"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragmentDashboardBottomBar"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/buttonBackToMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_dashboard_back_text"
            android:theme="@style/SecondaryButton"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>
</RelativeLayout>